--- a/index.html
+++ b/index.html
@@ -6,8 +6,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Heebo&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>Pitchfork</h1>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-4 col-lg-6">
+          <img src="img/mia.png" />
+          <h2 class="mia">
+            M.I.A. Scores First No. 1 Song With Travis Scott’s “FRANCHISE”
+          </h2>
+
+          <p class="author">
+            BY: MATTHEW STRAUSS<br />
+            NEWS
+            <span class="lightgrey">/ 58 MINS AGO</span>
+          </p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/theones.png" />
+          <h3 class="article">The Ones: Wifigawd’s “Outside”</h3>
+
+          <p class="author">
+            BY: ALPHONSE PIERRE<br />THE PITCH<span class="lightgrey"
+              >/ 6 HRS AGO</span
+            >
+          </p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/bts.png" />
+          <h3 class="article">
+            BTS Break Down Their Albums, From DARK & WILD to MAP OF THE SOUL : 7
+            | On the Records
+          </h3>
+
+          <p class="author">
+            BY: PITCHFORK<br />VIDEO<span class="lightgrey">/ 4 HRS AGO</span>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12"><p class="review">REVIEWS</p></div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-lg-4 col-xl-6">
+          <h2 class="gabriel">Gabriel Garzón-Montano<br /><em>Agüita</em></h2>
+
+          <p class="author-review">BY: MATTHEW ISMAL RUIZ / POP/R&B</p>
+          <p>
+            Spanning tender acoustic ballads, silky R&B performance, and
+            contemporary urbano swagger, the singer-songwriter and
+            multi-instrumentalist’s second LP unites the facets of his own
+            artistic identity.
+          </p>
+        </div>
+        <div class="col-12 col-lg-4 col-xl-3">
+          <h3 class="article-review">Hen Ogledd</h3>
+          <p class="subtitle">Free Humans</p>
+
+          <p class="author-review">BY: JAZZ MONROE / EXPERIMENTAL</p>
+          <p>
+            The Newcastle band’s oddball indie pop makes a pitch to those unsure
+            whether to fret over civilizational decline or their own minor
+            burdens: Why not both!
+          </p>
+        </div>
+        <div class="col-12 col-lg-4 col-xl-3">
+          <h3 class="article-review">Westside Gunn</h3>
+          <p class="subtitle">Who Made The Sunshine</p>
+
+          <p class="author-review">BY: ALPHONSE PIERRE / RAP</p>
+          <p>
+            The Buffalo rapper’s new project is another serving of glamorous
+            beat loops and gaudy raps delivered with the confidence of someone
+            who believes that all of their thoughts belong in the MoMA.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
